# Octopal

./: .gitignore  CLAUDE.md  README.ko.md  README.md  designer.octo  developer.octo  developer.rune  octopal.octo  package-lock.json  package.json  planner.octo  pnpm-lock.yaml
.github/workflows/: release.yml
assets/: icon.icns
docs/: goose-integration-notes.md  phase-3-4-scope.md  phase-5a-scope.md  stage-6a-activity-panel-regression.md  stage-6c-scope.md  troubleshooting-linux-keyring.md
renderer/: index.html  tsconfig.json  vite.config.ts
renderer/src/: App.tsx  global.d.ts  globals.css  main.tsx  tauri-api.ts  types.ts  utils.ts
renderer/src/components/: AgentAvatar.tsx  ChatPanel.tsx  EmojiPicker.tsx  LeftSidebar.tsx  MentionPopup.tsx  RightSidebar.tsx  SettingsPanel.tsx  Toast.tsx
renderer/src/components/Conversations/: conversation-handlers.test.ts  conversation-handlers.ts  conversation-helpers.test.ts  conversation-helpers.ts
renderer/src/components/TaskBoard/: useTaskBoard.security.test.ts  useTaskBoard.test.ts
renderer/src/components/modals/: ClaudeLoginModal.tsx  CreateAgentModal.tsx  CreateWorkspaceModal.tsx  EditAgentModal.mcp.test.tsx  EditAgentModal.tsx  McpServerEditModal.test.tsx  McpValidationModal.tsx  RenameConversationModal.tsx  SkillEditModal.test.tsx  SkillEditModal.tsx
renderer/src/components/settings/: AppearanceFontSelector.test.tsx  AppearanceFontSelector.tsx  DefaultModelCard.test.tsx  DefaultModelCard.tsx  ModelsTab.tsx  ProviderCard.tsx  ProvidersTab.tsx  RuntimeCard.tsx  SkillsTab.test.tsx  SkillsTab.tsx  fonts.test.ts
renderer/src/i18n/locales/: en.json  ko.json
scripts/: acp-cancel-probe.mjs  acp-live-probe.mjs  acp-method-probe.mjs  ensure-goose-sidecar.mjs  goose-version.json  tauri-build.mjs
src/: main.ts  preload.ts  security.test.ts  security.ts  smart-observer.test.ts  smart-observer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: keyring_smoke.rs
src-tauri/resources/: providers.json
src-tauri/resources/goose_custom_providers/: cerebras.json  custom_nvidia.json  deepseek.json  groq.json  lmstudio.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: agent.rs  api_keys.rs  dispatcher.rs  files.rs  folder.rs  git.rs  goose_acp.rs  goose_acp_mapper.rs  goose_acp_pool.rs  mod.rs  model_alias.rs  observer.rs  octo.rs  process_pool.rs  providers_manifest.rs  settings.rs  skills.rs  wiki.rs  workspace.rs
