[package]
name = "octopal"
version = "0.1.28"
description = "Chat with your .octo agents"
authors = ["Studio H"]
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "allow" }

[lib]
name = "octopal_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
notify = "6"
dirs = "5"
libc = "0.2"
chrono = "0.4"
base64 = "0.22"
trash = "5"
sha2 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
