[package]
name = "octopal"
version = "0.1.42"
description = "Chat with your .octo agents"
authors = ["Studio H"]
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "allow" }

[lib]
name = "octopal_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
notify = "6"
dirs = "5"
libc = "0.2"
chrono = "0.4"
base64 = "0.22"
trash = "5"
sha2 = "0.10"
urlencoding = "2"
# Phase 4: OS-backed API key storage. Native backends only (no
# default-features) — keeps tokio-dbus off mac/windows builds.
# `linux-native-sync-persistent` uses dbus-sync → blocking read/write on
# Linux, matching our call-site shape (load/save are sync). On macOS
# Keychain and Windows Credential Manager the sync API is native.
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "linux-native-sync-persistent", "sync-secret-service"] }
# Phase 4: Test Connection button in Settings → Providers hits each
# provider's free `/models` endpoint (anthropic / openai / google / ollama).
# `rustls-tls` avoids OpenSSL dep; `json` unused so far but cheap.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
